--- a/Portals/Views/Home/Index.cshtml
+++ b/Portals/Views/Home/Index.cshtml
@@ -14,6 +14,7 @@
                     @*<li>@Html.ActionLink("Contact", "Contact", "Home")</li>*@
                     <li>@Html.ActionLink("Course", "Index", "Courses")</li>
                     <li>@Html.ActionLink("MeetUp", "Index", "MeetUp")</li>
+                    <li>@Html.ActionLink("Forum", "Index", "Forum")</li>
                     <li>@Html.ActionLink("Job", "Index", "Jobs")</li>
                     <li>@Html.ActionLink("Log in", "Login", "Account", routeValues: null, htmlAttributes: new { id = "loginLink" })</li>
                 </ul>
