--- a/Portals/Content/grayscale.css
+++ b/Portals/Content/grayscale.css
@@ -9,7 +9,7 @@ body {
     height: 100%;
     font-family: Lora,"Helvetica Neue",Helvetica,Arial,sans-serif;
     color: #fff;
-    background-color: #33CCFF;
+    background-color: #a7edeb;
 }
 
 html {
@@ -250,18 +250,19 @@ a:focus {
 
 .content-section {
     padding-top: 100px;
+    height:800px;
 }
 
 .download-section {
     width: 100%;
-    padding: 50px 0;
-    color: #fff;
-    background: url(../img/downloads-bg.jpg) no-repeat center center scroll;
-    background-color: #000;
+    color: #fcfcfc;
+    background: url(../img/TestiMonials.png) no-repeat center center scroll;
+    height:900px;
     -webkit-background-size: cover;
     -moz-background-size: cover;
     background-size: cover;
     -o-background-size: cover;
+
 }
 
 #map {
